apps/low-cve-api-rust/compile_errors.txt
    Checking low-cve-api-rust v0.1.0 (/Users/tekimax/Documents/TEKIMAX LLC/03-Engineering/Architecture/adaptive-monorepo/apps/low-cve-api-rust)
error[E0428]: the name `__path_create_response` is defined multiple times
   --> src/main.rs:136:1
    |
128 | / #[utoipa::path(
129 | |     post,
130 | |     path = "/v1/responses",
131 | |     request_body = CreateResponseRequest,
...   |
135 | | )]
    | |__- previous definition of the type `__path_create_response` here
136 | / #[utoipa::path(
137 | |     post,
138 | |     path = "/v1/function-gemma",
139 | |     request_body = CreateResponseRequest,
...   |
143 | | )]
    | |__^ `__path_create_response` redefined here
    |
    = note: `__path_create_response` must be defined only once in the type namespace of this module
    = note: this error originates in the attribute macro `utoipa::path` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Response` and `extract::State`
 --> src/main.rs:3:19
  |
3 |     Router, Json, extract::State, response::{IntoResponse, Response, Sse},
  |                   ^^^^^^^^^^^^^^                           ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> src/main.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused imports: `OpenResponseItem` and `OutputContentPart`
 --> src/providers/ollama.rs:3:80
  |
3 | use crate::types::{CreateResponseRequest, InputContentPart, OpenResponseEvent, OpenResponseItem, ResponseResource, OutputContentPart, Inp...
  |                                                                                ^^^^^^^^^^^^^^^^                    ^^^^^^^^^^^^^^^^^

error[E0119]: conflicting implementations of trait `utoipa::Path` for type `__path_create_response`
   --> src/main.rs:136:1
    |
128 | / #[utoipa::path(
129 | |     post,
130 | |     path = "/v1/responses",
131 | |     request_body = CreateResponseRequest,
...   |
135 | | )]
    | |__- first implementation here
136 | / #[utoipa::path(
137 | |     post,
138 | |     path = "/v1/function-gemma",
139 | |     request_body = CreateResponseRequest,
...   |
143 | | )]
    | |__^ conflicting implementation for `__path_create_response`
    |
    = note: this error originates in the attribute macro `utoipa::path` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: irrefutable `if let` pattern
  --> src/providers/gemini.rs:62:16
   |
62 |             if let InputItem::Message { role, content } = item {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this pattern will always match, so the `if let` is useless
   = help: consider replacing the `if let` with a `let`
   = note: `#[warn(irrefutable_let_patterns)]` on by default

warning: variable does not need to be mutable
   --> src/providers/gemini.rs:177:22
    |
177 |                  let mut start_idx = 0;
    |                      ----^^^^^^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/providers/gemini.rs:181:22
    |
181 |                  let mut processed_len = 0;
    |                      ----^^^^^^^^^^^^^
    |                      |
    |                      help: remove this `mut`

warning: variable does not need to be mutable
   --> src/providers/gemini.rs:184:22
    |
184 |                  let mut current_obj_str = String::new();
    |                      ----^^^^^^^^^^^^^^^
    |                      |
    |                      help: remove this `mut`

warning: unused variable: `start_idx`
   --> src/providers/gemini.rs:177:22
    |
177 |                  let mut start_idx = 0;
    |                      ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_start_idx`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `processed_len`
   --> src/providers/gemini.rs:181:22
    |
181 |                  let mut processed_len = 0;
    |                      ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_processed_len`

warning: unused variable: `i`
   --> src/providers/gemini.rs:186:23
    |
186 |                  for (i, &c) in chars.iter().enumerate() {
    |                       ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: irrefutable `if let` pattern
  --> src/providers/ollama.rs:73:16
   |
73 |             if let InputItem::Message { role, content } = item {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this pattern will always match, so the `if let` is useless
   = help: consider replacing the `if let` with a `let`

Some errors have detailed explanations: E0119, E0428.
For more information about an error, try `rustc --explain E0119`.
warning: `low-cve-api-rust` (bin "low-cve-api-rust") generated 11 warnings
error: could not compile `low-cve-api-rust` (bin "low-cve-api-rust") due to 2 previous errors; 11 warnings emitted
